[package]
name = "patch-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.15", features = ["full"] }
tokio = { version = "1.14.0", features = ["full"] }
xz2 = "0.1.6"
anyhow = "1.0.48"
walkdir = "2.3.2"
log = "0.4.14"
env_logger = "0.9.0"
clap = { version = "3.0.14", features = ["derive"] }
notify = "4.0.17"